Updated Get to return url and a4iot-build number
